Harden deployment pipeline and manifests

--- a/gitops/argocd/app.yaml
+++ b/gitops/argocd/app.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/coreweave/tensorizer
     path: helm/tensorizer-vllm
-    targetRevision: HEAD
+    targetRevision: main
   project: default
   syncPolicy:
     automated:
