--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,17 +8,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@b4ffde82f28162d9a60b3dfb39e4f2447a3b1c7f
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@f3821f4794d9a373d160d5e86f922b622d21b008
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@bd24c49a951a6eb2de75e8b4785905a9a05fd85e
+        with:
+          version: v1.28.3
+      - name: Set up Helm
+        uses: azure/setup-helm@e9a68a7554547a8bb11e9a56ce3cfd31c8eaa974
+        with:
+          version: v3.12.3
+      - name: Configure kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > ~/.kube/config
       - name: Build
         run: docker build -t example/vllm:${{ github.sha }} .
       - name: Scan
-        uses: aquasecurity/trivy-action@0.20.0
+        uses: aquasecurity/trivy-action@4d1a13b66e041b35769128a8b06845050806e06e
         with:
           image-ref: example/vllm:${{ github.sha }}
       - name: Login
-        uses: docker/login-action@v3
+        uses: docker/login-action@ee0af82ac35b689a7dce1aa3e9e4b0943aa53d25
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -26,4 +38,8 @@ jobs:
       - name: Push
         run: docker push example/vllm:${{ github.sha }}
       - name: Helm Upgrade
-        run: helm upgrade --install tensorizer helm/tensorizer-vllm --set image=example/vllm:${{ github.sha }} --namespace test --create-namespace
+        run: |
+          helm upgrade --install tensorizer helm/tensorizer-vllm \
+            --set image=example/vllm:${{ github.sha }} \
+            --namespace test \
+            --create-namespace
