--- a/helm/tensorizer-vllm/values.yaml
+++ b/helm/tensorizer-vllm/values.yaml
@@ -1,3 +1,5 @@
-image: "vllm/vllm:latest"
+image: "vllm/vllm:0.2.2"
 modelURI: "s3://my-bucket/models/tiny-gpt2.tensors"
 host: "vllm.example.com"
+s3:
+  secretName: ""
